# elemines-cxx

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  README.artwork  TODO  autogen.sh  configure.ac
data/desktop/: Makefile.am  elemines.desktop
data/themes/: Makefile.am  default-big.edc  default.edc
data/themes/default/: Makefile.am  default-big.edc  default.edc
data/themes/default/edc/: cell.edc
data/themes/fonts/: Makefile.am
data/themes/images/: Makefile.am
data/themes/sounds/: Makefile.am  digging.flac
doc/: elemines.1
m4/: elm_quicklaunch.m4
packaging/slackware/: elemines.SlackBuild  slack-required
po/: LINGUAS  elemines.pot  eo.po  fr.po  gl.po  it.po  ko.po  pl.po  pt_PT.po  ru.po  sr.po
src/: Makefile.am  elemines.h  end.c  game.c  game.cpp  getopt.c  gui.c  gui.cpp  help.c  init.c  main.c  main.cpp
