MAINTAINERCLEANFILES = \
		       Makefile.in \
		       aclocal.m4 \
		       config.guess \
		       config.h.in \
		       config.rpath \
		       config.sub \
		       configure \
		       depcomp \
		       install-sh \
		       ltmain.sh \
		       missing \
		       libtool.m4 \
		       ltoptions.m4 \
		       ltsugar.m4 \
		       ltversion.m4 \
		       lt~obsolete.m4

SUBDIRS = data src

ACLOCAL_AMFLAGS = -I m4

filesdir = $(docdir)
files_DATA = AUTHORS COPYING ChangeLog INSTALL NEWS README

EXTRA_DIST = autogen.sh configure config.rpath

