MAINTAINERCLEANFILES = \
		       Makefile.in \
		       aclocal.m4 \
		       config.guess \
		       config.h.in \
		       config.sub \
		       configure \
		       depcomp \
		       install-sh \
		       ltmain.sh \
		       missing \
		       m4/libtool.m4 \
		       m4/ltoptions.m4 \
		       m4/ltsugar.m4 \
		       m4/ltversion.m4 \
		       m4/lt~obsolete.m4 \
		       $(PACKAGE_TARNAME)-$(PACKAGE_VERSION).tar.gz \
		       $(PACKAGE_TARNAME)-$(PACKAGE_VERSION).tar.bz2

SUBDIRS = data doc packaging src

ACLOCAL_AMFLAGS = -I m4

filesdir = $(docdir)
files_DATA = AUTHORS COPYING COPYING.ART ChangeLog INSTALL NEWS README TODO

EXTRA_DIST = COPYING.ART autogen.sh configure

