MAINTAINERCLEANFILES = \
		       Makefile.in \
		       aclocal.m4 \
		       config.guess \
		       config.h.in \
		       config.sub \
		       configure \
		       depcomp \
		       install-sh \
		       ltmain.sh \
		       missing \
		       m4/libtool.m4 \
		       m4/ltoptions.m4 \
		       m4/ltsugar.m4 \
		       m4/ltversion.m4 \
		       m4/lt~obsolete.m4 \
		       $(PACKAGE_TARNAME)-$(PACKAGE_VERSION).tar.gz \
		       $(PACKAGE_TARNAME)-$(PACKAGE_VERSION).tar.bz2

SUBDIRS = data doc packaging src

ACLOCAL_AMFLAGS = -I m4

filesdir = $(docdir)
files_DATA = \
	     AUTHORS \
	     COPYING \
	     ChangeLog \
	     GPLv2.txt \
	     INSTALL \
	     NEWS \
	     OFL.txt \
	     README \
	     README.artwork \
	     TODO

EXTRA_DIST = \
	     GPLv2.txt \
	     OFL.txt \
	     README.artwork \
	     autogen.sh \
	     configure \
	     m4/efl_attribute.m4 \
	     m4/efl_binary.m4 \
	     m4/efl_compiler_flag.m4 \
	     m4/efl_path_max.m4
