MAINTAINERCLEANFILES = Makefile.in

EXTRA_DIST = bomb.png \
	     empty.png \
	     fire1.png \
	     fire2.png \
	     fire3.png \
	     fire4.png \
	     fire5.png \
	     fire6.png \
	     fire7.png \
	     fire8.png \
	     flag1.png \
	     flag2.png \
	     flag3.png \
	     flag4.png \
	     flowers.png \
	     grass.png \
	     hole.png \
	     mushrooms.png \
	     sand.png \
	     stones.png
